added Storytimes slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -4,6 +4,23 @@
   <div class="mySlides my-fade">
     <figure class="slider">
       <figure>
+        <a href="http://host6.evanced.info/melsa/washington/eventcalendar.asp?ag=&et=Storytimes&df=list&cn=0&private=0&ln=ALL" style="text-decoration: none;">
+          <img src="/ImageRepository/Document?documentID=519" alt="Winter Reads 2017">
+          <figcaption>
+            <section>
+              <h4>Storytimes</h4>
+              <p>Find one near you!</p>
+
+
+            </section>
+          </figcaption></a>
+        </figure>
+      </figure>
+    </div>
+
+  <div class="mySlides my-fade">
+    <figure class="slider">
+      <figure>
         <a href="https://www.washcolib.org/397/Winter-Reads" style="text-decoration: none;">
           <img src="/ImageRepository/Document?documentID=517" alt="Winter Reads 2017">
           <figcaption>
@@ -78,7 +95,7 @@
             <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
             <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
             <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-            <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
+            <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
             <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
             <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
