added Transparent Language, archived Great Courses

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -276,3 +276,20 @@
         </figure>
       </figure>
     </div>
+
+    <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
+          <a href="http://washingtonmn.oneclickdigital.com/#search?search-source=quick-all&page-size=60&all=great%20courses&mediatype=eaudio" style="text-decoration: none;">
+            <img src="/ImageRepository/Document?documentID=475" alt="">
+            <figcaption>
+              <section>
+                <h4>The Great Courses</h4>
+                <p>Available now through <br>
+                  OneClickdigital</p>
+
+                </section>
+              </figcaption></a>
+            </figure>
+          </figure>
+        </div>
