--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -4,12 +4,12 @@
   <div class="mySlides my-fade">
     <figure class="slider">
       <figure>
-        <a href="http://host6.evanced.info/melsa/washington/eventcalendar.asp?ag=&et=Storytimes&df=list&cn=0&private=0&ln=ALL" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=519" alt="Winter Reads 2017">
+        <a href="http://ezproxy.washington.lib.mn.us/login?url=http://www.library.transparent.com/washingtoncomn" style="text-decoration: none;">
+          <img src="/ImageRepository/Document?documentID=530" alt="Transparent Language">
           <figcaption>
             <section>
-              <h4>Storytimes</h4>
-              <p>Find one near you!</p>
+              <h4>Transparent Language</h4>
+              <p>Get your free account today!</p>
 
 
             </section>
@@ -18,15 +18,32 @@
       </figure>
     </div>
 
+    <div class="mySlides my-fade">
+      <figure class="slider">
+        <figure>
+          <a href="https://www.washcolib.org/397/Winter-Reads" style="text-decoration: none;">
+            <img src="/ImageRepository/Document?documentID=517" alt="Winter Reads 2017">
+            <figcaption>
+              <section>
+                <h4>Winter Reads 2017</h4>
+                <p>Winter goes a whole lot faster with a book&hellip;</p>
+
+
+              </section>
+            </figcaption></a>
+          </figure>
+        </figure>
+      </div>
+
   <div class="mySlides my-fade">
     <figure class="slider">
       <figure>
-        <a href="https://www.washcolib.org/397/Winter-Reads" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=517" alt="Winter Reads 2017">
+        <a href="http://host6.evanced.info/melsa/washington/eventcalendar.asp?ag=&et=Storytimes&df=list&cn=0&private=0&ln=ALL" style="text-decoration: none;">
+          <img src="/ImageRepository/Document?documentID=519" alt="Winter Reads 2017">
           <figcaption>
             <section>
-              <h4>Winter Reads 2017</h4>
-              <p>Winter goes a whole lot faster with a book&hellip;</p>
+              <h4>Storytimes</h4>
+              <p>Find one near you!</p>
 
 
             </section>
@@ -50,23 +67,6 @@
         </figure>
       </figure>
     </div>
-
-    <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="http://washingtonmn.oneclickdigital.com/#search?search-source=quick-all&page-size=60&all=great%20courses&mediatype=eaudio" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=475" alt="">
-            <figcaption>
-              <section>
-                <h4>The Great Courses</h4>
-                <p>Available now through <br>
-                  OneClickdigital</p>
-
-                </section>
-              </figcaption></a>
-            </figure>
-          </figure>
-        </div>
 
         <div class="mySlides my-fade">
           <figure class="slider">
