added line for git gui testing

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -1,4 +1,5 @@
 <!-- each slide has 2 images: one local for testing and one for live site. Comment out one or the other.  -->
+<!-- NOTE no longer using local image for testing. I upload finished image to CivicPlus and test in the site -->
 
 
 
