removed and archived oneClickDigital slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -1,276 +1,356 @@
-
 <div class="w3-content w3-display-container">
 
-  <div class="mySlides my-fade">
-    <figure class="slider">
-      <figure>
-        <a href="http://clubbook.org/?portfolio=chris-pavone" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=535" alt="Transparent Language">
-          <!-- <figcaption>
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="http://clubbook.org/?portfolio=chris-pavone" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=535" alt="Transparent Language">
+                    <!-- <figcaption>
             <section>
               <h4>Transparent Language</h4>
               <p>Get your free account today!</p>
             </section>
           </figcaption> -->
-        </a>
+                </a>
+            </figure>
         </figure>
-      </figure>
-    </div>
-
-  <div class="mySlides my-fade">
-    <figure class="slider">
-      <figure>
-        <a href="http://ezproxy.washington.lib.mn.us/login?url=http://www.library.transparent.com/washingtoncomn" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=530" alt="Transparent Language">
-          <figcaption>
-            <section>
-              <h4>Transparent Language</h4>
-              <p>Get your free account today!</p>
-
-
-            </section>
-          </figcaption></a>
-        </figure>
-      </figure>
     </div>
 
     <div class="mySlides my-fade">
-      <figure class="slider">
-        <figure>
-          <a href="https://www.washcolib.org/397/Winter-Reads" style="text-decoration: none;">
-            <img src="/ImageRepository/Document?documentID=517" alt="Winter Reads 2017">
-            <figcaption>
-              <section>
-                <h4>Winter Reads 2017</h4>
-                <p>Winter goes a whole lot faster with a book&hellip;</p>
-
-
-              </section>
-            </figcaption></a>
-          </figure>
-        </figure>
-      </div>
-
-  <div class="mySlides my-fade">
-    <figure class="slider">
-      <figure>
-        <a href="http://host6.evanced.info/melsa/washington/eventcalendar.asp?ag=&et=Storytimes&df=list&cn=0&private=0&ln=ALL" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=519" alt="Winter Reads 2017">
-          <figcaption>
-            <section>
-              <h4>Storytimes</h4>
-              <p>Find one near you!</p>
-
-
-            </section>
-          </figcaption></a>
-        </figure>
-      </figure>
-    </div>
-
-  <div class="mySlides my-fade">
-    <figure class="slider">
-      <figure>
-        <a href="https://smartpass.melsa.org/" style="text-decoration: none;">
-          <img src="/ImageRepository/Document?documentID=484" alt="">
-          <figcaption>
-            <section>
-              <h4>Welcome to smARTpass! </h4>
-              <p>Use your library card to get free tickets to shows and museums</p>
-
-            </section>
-          </figcaption></a>
-        </figure>
-      </figure>
-    </div>
-
-        <div class="mySlides my-fade">
-          <figure class="slider">
+        <figure class="slider">
             <figure>
-              <a href="http://washingtonmn.oneclickdigital.com/" style="text-decoration: none;">
-                <img src="/ImageRepository/Document?documentID=473" alt="">
-                <figcaption>
-                  <section>
-                    <h4>OneClickdigital</h4>
-                    <h4>Download audiobooks from our library! </h4>
-                    <p>24 hours/7 days a week </p>
+                <a href="http://ezproxy.washington.lib.mn.us/login?url=http://www.library.transparent.com/washingtoncomn" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=530" alt="Transparent Language">
+                    <figcaption>
+                        <section>
+                            <h4>Transparent Language</h4>
+                            <p>Get your free account today!</p>
 
-                  </section>
-                </figcaption></a>
-              </figure>
+
+                        </section>
+                    </figcaption>
+                </a>
             </figure>
-          </div>
+        </figure>
+    </div>
+
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="https://www.washcolib.org/397/Winter-Reads" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=517" alt="Winter Reads 2017">
+                    <figcaption>
+                        <section>
+                            <h4>Winter Reads 2017</h4>
+                            <p>Winter goes a whole lot faster with a book&hellip;</p>
 
 
-          <div class="w3-center w3-section" style="width:100%">
-            <!-- advance left and right arrows
+                        </section>
+                    </figcaption>
+                </a>
+            </figure>
+        </figure>
+    </div>
+
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="http://host6.evanced.info/melsa/washington/eventcalendar.asp?ag=&et=Storytimes&df=list&cn=0&private=0&ln=ALL" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=519" alt="Winter Reads 2017">
+                    <figcaption>
+                        <section>
+                            <h4>Storytimes</h4>
+                            <p>Find one near you!</p>
+
+
+                        </section>
+                    </figcaption>
+                </a>
+            </figure>
+        </figure>
+    </div>
+
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="https://smartpass.melsa.org/" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=484" alt="">
+                    <figcaption>
+                        <section>
+                            <h4>Welcome to smARTpass! </h4>
+                            <p>Use your library card to get free tickets to shows and museums</p>
+
+                        </section>
+                    </figcaption>
+                </a>
+            </figure>
+        </figure>
+    </div>
+
+
+
+    <div class="w3-center w3-section" style="width:100%">
+        <!-- advance left and right arrows
             <div class="w3-left w3-padding-left w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(-1)">&#10094;</div>
             <div class="w3-right w3-padding-right w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(1)">&#10095;</div> -->
 
-            <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
-            <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
-            <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-            <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-            <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
-            <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span>
-            <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
-          </div>
+    </div>
 
-        </div>
+</div>
 
-        <style>
-        .mySlides {display:none}
-        .w3-left, .w3-right, .w3-badge {cursor:pointer}
-        .w3-content{max-width:1200px;margin:auto;}
-        .w3-display-container{position:relative}
-        .w3-center{text-align:center}
-        .w3-section{margin-top:12px;margin-bottom:12px}
-        /*.w3-display-bottomleft{position:absolute;left:0;bottom:-5px}*/
-        .w3-left{float:left}.w3-right{float:right}
-        .w3-padding-left{padding-left:16px}.w3-padding-right{padding-right:16px}
-        .w3-hover-text-dkgrey:hover{color:#959595}
-        .w3-badge{background-color:#cdcdcd;color:#959595;display:inline-block;text-align:center;border-radius:50%;height:8px;width:8px;margin: 0 5px;}
-        .w3-text-grey{color:#cdcdcd;}
-        .w3-grey,.w3-hover-grey:hover{color:#cdcdcd;background-color:#959595}
-        .w3-animate-fading{-webkit-animation:fading 10s infinite;animation:fading 10s infinite}
-        @-webkit-keyframes fading{0%{opacity:0}50%{opacity:1}100%{opacity:1}}
-        @keyframes fading{0%{opacity:0}50%{opacity:1}100%{opacity:1}}
-        .my-fade {
-          background-color: #000;
-          animation-name: fading;
-          animation-duration: .45s;
+<style>
+    .mySlides {
+        display: none
+    }
+
+    .w3-left,
+    .w3-right,
+    .w3-badge {
+        cursor: pointer
+    }
+
+    .w3-content {
+        max-width: 1200px;
+        margin: auto;
+    }
+
+    .w3-display-container {
+        position: relative
+    }
+
+    .w3-center {
+        text-align: center
+    }
+
+    .w3-section {
+        margin-top: 12px;
+        margin-bottom: 12px
+    }
+    /*.w3-display-bottomleft{position:absolute;left:0;bottom:-5px}*/
+
+    .w3-left {
+        float: left
+    }
+
+    .w3-right {
+        float: right
+    }
+
+    .w3-padding-left {
+        padding-left: 16px
+    }
+
+    .w3-padding-right {
+        padding-right: 16px
+    }
+
+    .w3-hover-text-dkgrey:hover {
+        color: #959595
+    }
+
+    .w3-badge {
+        background-color: #cdcdcd;
+        color: #959595;
+        display: inline-block;
+        text-align: center;
+        border-radius: 50%;
+        height: 8px;
+        width: 8px;
+        margin: 0 5px;
+    }
+
+    .w3-text-grey {
+        color: #cdcdcd;
+    }
+
+    .w3-grey,
+    .w3-hover-grey:hover {
+        color: #cdcdcd;
+        background-color: #959595
+    }
+
+    .w3-animate-fading {
+        -webkit-animation: fading 10s infinite;
+        animation: fading 10s infinite
+    }
+
+    @-webkit-keyframes fading {
+        0% {
+            opacity: 0
         }
+        50% {
+            opacity: 1
+        }
+        100% {
+            opacity: 1
+        }
+    }
 
-        /*CSS from original slider*/
-        figure {
-          margin: 0; }
+    @keyframes fading {
+        0% {
+            opacity: 0
+        }
+        50% {
+            opacity: 1
+        }
+        100% {
+            opacity: 1
+        }
+    }
 
-          figure.slider {
-            position: relative;
-            font-size: 0;
-          }
+    .my-fade {
+        background-color: #000;
+        animation-name: fading;
+        animation-duration: .45s;
+    }
+    /*CSS from original slider*/
 
-          figure.slider figure {
-            height: auto;
-            display: inline-block;
-            position: inherit; }
+    figure {
+        margin: 0;
+    }
 
-            figure.slider img {
-              width: 100%;
-              height: auto; }
+    figure.slider {
+        position: relative;
+        font-size: 0;
+    }
 
-              figure.slider figure figcaption {
-                position: absolute;
-                top: 0;
-                right: 3%;
-                background: rgba(0, 0, 0, 0.7);
-                color: #fff;
-                width: 25%;
-                height: 100%;
-                /*font-family: serif;*/
-                padding: 0 1.2rem;
-                text-align: center;
-              }
+    figure.slider figure {
+        height: auto;
+        display: inline-block;
+        position: inherit;
+    }
 
-              figure.slider figure figcaption h4 {
-                font-family: "Open Sans", sans-serif;
-                font-size: 1.7rem;
-                line-height: 2.2rem;
-                margin: 0 0 1rem 0;
-              }
+    figure.slider img {
+        width: 100%;
+        height: auto;
+    }
 
-              figure.slider figure figcaption section {
-                position: relative;
-                top: 50%;
-                transform: translateY(-50%);
-              }
+    figure.slider figure figcaption {
+        position: absolute;
+        top: 0;
+        right: 3%;
+        background: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        width: 25%;
+        height: 100%;
+        /*font-family: serif;*/
+        padding: 0 1.2rem;
+        text-align: center;
+    }
 
-              figure.slider figure figcaption p {
-                font-family: serif;
-                font-size: 1.3rem;
-                line-height: 1.8rem;
-                margin-top: .8rem; }
+    figure.slider figure figcaption h4 {
+        font-family: "Open Sans", sans-serif;
+        font-size: 1.7rem;
+        line-height: 2.2rem;
+        margin: 0 0 1rem 0;
+    }
 
-                figure.slider figure figcaption a {
-                  color: #fff !important;
-                }
+    figure.slider figure figcaption section {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 
-                @media only screen and (max-width: 450px) {
-                  .w3-content {
-                    display: none;
-                  }
-                }
+    figure.slider figure figcaption p {
+        font-family: serif;
+        font-size: 1.3rem;
+        line-height: 1.8rem;
+        margin-top: .8rem;
+    }
 
-                @media only screen and (min-width: 451px) and (max-width: 820px) {
-                  figure.slider figure figcaption h4 {
-                    font-size: 1rem;
-                    line-height: 1.3rem;
-                    margin: 0 0 .4rem 0;
-                  }
-                  figure.slider figure figcaption p {
-                    font-size: .6rem;
-                    line-height: .9rem;
-                    margin-top: .3rem;
-                  }
-                }
+    figure.slider figure figcaption a {
+        color: #fff !important;
+    }
 
-                @media only screen and (min-width: 821px) and (max-width: 1180px) {
-                  figure.slider figure figcaption h4 {
-                    font-size: 1.2rem;
-                    line-height: 1.8rem;
-                    margin: 0 0 .6rem 0;
-                  }
-                  figure.slider figure figcaption p {
-                    font-size: .8rem;
-                    line-height: 1.2rem;
-                    margin-top: .5rem;
-                  }
-                }
-                </style>
+    @media only screen and (max-width: 450px) {
+        .w3-content {
+            display: none;
+        }
+    }
 
-                <script>
-                var slideIndex = 0;
-                showDivs(slideIndex);
+    @media only screen and (min-width: 451px) and (max-width: 820px) {
+        figure.slider figure figcaption h4 {
+            font-size: 1rem;
+            line-height: 1.3rem;
+            margin: 0 0 .4rem 0;
+        }
+        figure.slider figure figcaption p {
+            font-size: .6rem;
+            line-height: .9rem;
+            margin-top: .3rem;
+        }
+    }
 
-                function plusDivs(n) {
-                  showDivs(slideIndex += n);
-                }
+    @media only screen and (min-width: 821px) and (max-width: 1180px) {
+        figure.slider figure figcaption h4 {
+            font-size: 1.2rem;
+            line-height: 1.8rem;
+            margin: 0 0 .6rem 0;
+        }
+        figure.slider figure figcaption p {
+            font-size: .8rem;
+            line-height: 1.2rem;
+            margin-top: .5rem;
+        }
+    }
+</style>
 
-                function currentDiv(n) {
-                  showDivs(slideIndex = n);
-                }
+<script>
+    var slideIndex = 0;
+    showDivs(slideIndex);
 
-                function showDivs(n) {
-                  var i;
-                  var x = document.getElementsByClassName("mySlides");
-                  var dots = document.getElementsByClassName("demo");
-                  if (n > x.length) {slideIndex = 1}
-                  if (n < 1) {slideIndex = x.length}
-                  for (i = 0; i < x.length; i++) {
-                    x[i].style.display = "none";
-                  }
-                  for (i = 0; i < dots.length; i++) {
-                    dots[i].className = dots[i].className.replace(" w3-grey", "");
-                  }
-                  x[slideIndex-1].style.display = "block";
-                  dots[slideIndex-1].className += " w3-grey";
-                }
+    function plusDivs(n) {
+        showDivs(slideIndex += n);
+    }
 
-                // comment this function call out to stop carousel when testing
-                carousel();
-                //---------------
+    function currentDiv(n) {
+        showDivs(slideIndex = n);
+    }
 
-                function carousel() {
-                  var i;
-                  var x = document.getElementsByClassName("mySlides");
-                  for (i = 0; i < x.length; i++) {
-                    x[i].style.display = "none";
-                  }
-                  slideIndex++;
-                  if (slideIndex > x.length) {slideIndex = 1}
-                  x[slideIndex-1].style.display = "block";
-                  currentDiv(slideIndex);
-                  setTimeout(carousel, 5000); // Change image every 5 seconds
-                }
-                </script>
+    function showDivs(n) {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("demo");
+        if (n > x.length) {
+            slideIndex = 1
+        }
+        if (n < 1) {
+            slideIndex = x.length
+        }
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" w3-grey", "");
+        }
+        x[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " w3-grey";
+    }
+
+    // comment this function call out to stop carousel when testing
+    carousel();
+    //---------------
+
+    function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        slideIndex++;
+        if (slideIndex > x.length) {
+            slideIndex = 1
+        }
+        x[slideIndex - 1].style.display = "block";
+        currentDiv(slideIndex);
+        setTimeout(carousel, 5000); // Change image every 5 seconds
+    }
+</script>
