archived Winter Reads slide

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -303,3 +303,22 @@
             </figure>
         </figure>
     </div>
+
+
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="https://www.washcolib.org/397/Winter-Reads" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=517" alt="Winter Reads 2017">
+                    <figcaption>
+                        <section>
+                            <h4>Winter Reads 2017</h4>
+                            <p>Winter goes a whole lot faster with a book&hellip;</p>
+
+
+                        </section>
+                    </figcaption>
+                </a>
+            </figure>
+        </figure>
+    </div>
