--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -1,3 +1,5 @@
+<!-- NOTE: When adding or deleting slides, dots must match number of slides. See note after slide code  -->
+
 <div class="w3-content w3-display-container">
 
     <div class="mySlides my-fade">
@@ -25,24 +27,6 @@
                         <section>
                             <h4>Transparent Language</h4>
                             <p>Get your free account today!</p>
-
-
-                        </section>
-                    </figcaption>
-                </a>
-            </figure>
-        </figure>
-    </div>
-
-    <div class="mySlides my-fade">
-        <figure class="slider">
-            <figure>
-                <a href="https://www.washcolib.org/397/Winter-Reads" style="text-decoration: none;">
-                    <img src="/ImageRepository/Document?documentID=517" alt="Winter Reads 2017">
-                    <figcaption>
-                        <section>
-                            <h4>Winter Reads 2017</h4>
-                            <p>Winter goes a whole lot faster with a book&hellip;</p>
 
 
                         </section>
@@ -94,11 +78,13 @@
             <div class="w3-left w3-padding-left w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(-1)">&#10094;</div>
             <div class="w3-right w3-padding-right w3-text-grey w3-hover-text-dkgrey" style="font-size:22px; margin-top:-10px;" onclick="plusDivs(1)">&#10095;</div> -->
 
+
+<!-- NOTE: the number of dots must match the number of slides, or slideshow won't work -->
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
