archived Club Books Chris Pavone slide

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -322,3 +322,19 @@
             </figure>
         </figure>
     </div>
+
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="http://clubbook.org/?portfolio=chris-pavone" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=535" alt="Club Book Author Chris Pavone">
+                    <!-- <figcaption>
+            <section>
+              <h4>Transparent Language</h4>
+              <p>Get your free account today!</p>
+            </section>
+          </figcaption> -->
+                </a>
+            </figure>
+        </figure>
+    </div>
