--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -5,22 +5,6 @@
     <div class="mySlides my-fade">
         <figure class="slider">
             <figure>
-                <a href="http://clubbook.org/?portfolio=chris-pavone" style="text-decoration: none;">
-                    <img src="/ImageRepository/Document?documentID=535" alt="Transparent Language">
-                    <!-- <figcaption>
-            <section>
-              <h4>Transparent Language</h4>
-              <p>Get your free account today!</p>
-            </section>
-          </figcaption> -->
-                </a>
-            </figure>
-        </figure>
-    </div>
-
-    <div class="mySlides my-fade">
-        <figure class="slider">
-            <figure>
                 <a href="http://ezproxy.washington.lib.mn.us/login?url=http://www.library.transparent.com/washingtoncomn" style="text-decoration: none;">
                     <img src="/ImageRepository/Document?documentID=530" alt="Transparent Language">
                     <figcaption>
@@ -83,7 +67,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
