added Instant Book Club slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -2,6 +2,24 @@
 
 <div class="w3-content w3-display-container">
 
+  <div class="mySlides my-fade">
+      <figure class="slider">
+          <figure>
+              <a href="https://www.washcolib.org/398/Instant-Book-Club-Kits" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=540" alt="Intant Book Club Kits">
+                  <figcaption>
+                      <section>
+                          <h4>Instant<br> Book Club Kits</h4>
+                          <p>Everything you need to start your own book club TODAY!</p>
+
+
+                      </section>
+                  </figcaption>
+              </a>
+          </figure>
+      </figure>
+  </div>
+
     <div class="mySlides my-fade">
         <figure class="slider">
             <figure>
@@ -67,7 +85,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
