added Chilton, archived smARTpass

--- a/Slideshow_archive.html
+++ b/Slideshow_archive.html
@@ -338,3 +338,20 @@
             </figure>
         </figure>
     </div>
+
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="https://smartpass.melsa.org/" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=484" alt="">
+                    <figcaption>
+                        <section>
+                            <h4>Welcome to smARTpass! </h4>
+                            <p>Use your library card to get free tickets to shows and museums</p>
+
+                        </section>
+                    </figcaption>
+                </a>
+            </figure>
+        </figure>
+    </div>
