--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -5,6 +5,24 @@
   <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
+              <a href="http://ezproxy.washington.lib.mn.us/login?url=http://infotrac.galegroup.com/itweb/mnpwashpl?db=CHLL" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=595" alt="">
+                  <figcaption>
+                      <section>
+                          <h4>ChiltonLibrary</h4>
+                          <p>Repair and maintenance information online 24/7</p>
+
+
+                      </section>
+                  </figcaption>
+              </a>
+          </figure>
+      </figure>
+  </div>
+
+  <div class="mySlides my-fade">
+      <figure class="slider">
+          <figure>
               <a href="https://www.washcolib.org/398/Instant-Book-Club-Kits" style="text-decoration: none;">
                   <img src="/ImageRepository/Document?documentID=540" alt="Intant Book Club Kits">
                   <figcaption>
@@ -48,23 +66,6 @@
                             <h4>Storytimes</h4>
                             <p>Find one near you!</p>
 
-
-                        </section>
-                    </figcaption>
-                </a>
-            </figure>
-        </figure>
-    </div>
-
-    <div class="mySlides my-fade">
-        <figure class="slider">
-            <figure>
-                <a href="https://smartpass.melsa.org/" style="text-decoration: none;">
-                    <img src="/ImageRepository/Document?documentID=484" alt="">
-                    <figcaption>
-                        <section>
-                            <h4>Welcome to smARTpass! </h4>
-                            <p>Use your library card to get free tickets to shows and museums</p>
 
                         </section>
                     </figcaption>
