add Nat. Lib. Wk. slider

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -23,6 +23,24 @@
   <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
+              <a href="https://wcm.ent.sirsi.net/client/en_US/default" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=596" alt="">
+                  <figcaption>
+                      <section>
+                          <h4>National Library Week 2017</h4>
+                          <p>April 9-15</p>
+
+
+                      </section>
+                  </figcaption>
+              </a>
+          </figure>
+      </figure>
+  </div>
+
+  <div class="mySlides my-fade">
+      <figure class="slider">
+          <figure>
               <a href="https://www.washcolib.org/398/Instant-Book-Club-Kits" style="text-decoration: none;">
                   <img src="/ImageRepository/Document?documentID=540" alt="Intant Book Club Kits">
                   <figcaption>
@@ -87,7 +105,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
