add Children's Book Week slide, delete Transparent Language

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -23,24 +23,6 @@
   <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
-              <a href="https://wcm.ent.sirsi.net/client/en_US/default" style="text-decoration: none;">
-                  <img src="/ImageRepository/Document?documentID=596" alt="">
-                  <figcaption>
-                      <section>
-                          <h4>National Library Week 2017</h4>
-                          <p>April 9-15</p>
-
-
-                      </section>
-                  </figcaption>
-              </a>
-          </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-          <figure>
               <a href="https://www.washcolib.org/398/Instant-Book-Club-Kits" style="text-decoration: none;">
                   <img src="/ImageRepository/Document?documentID=540" alt="Intant Book Club Kits">
                   <figcaption>
@@ -60,11 +42,11 @@
         <figure class="slider">
             <figure>
                 <a href="http://ezproxy.washington.lib.mn.us/login?url=http://www.library.transparent.com/washingtoncomn" style="text-decoration: none;">
-                    <img src="/ImageRepository/Document?documentID=530" alt="Transparent Language">
+                    <img src="/ImageRepository/Document?documentID=772" alt="">
                     <figcaption>
                         <section>
-                            <h4>Transparent Language</h4>
-                            <p>Get your free account today!</p>
+                            <h4>Children's Book Week</h4>
+                            <p>May 1-7, 2017</p>
 
 
                         </section>
@@ -105,7 +87,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
