added link to CBW slide, deleted old files

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -41,7 +41,7 @@
     <div class="mySlides my-fade">
         <figure class="slider">
             <figure>
-                <a href="http://ezproxy.washington.lib.mn.us/login?url=http://www.library.transparent.com/washingtoncomn" style="text-decoration: none;">
+                <a href="https://www.washcolib.org/320/New-Titles-for-Kids" style="text-decoration: none;">
                     <img src="/ImageRepository/Document?documentID=772" alt="">
                     <figcaption>
                         <section>
