--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -4,24 +4,6 @@
 
 
 
-      <div class="mySlides my-fade">
-          <figure class="slider">
-              <figure>
-                  <a href="https://www.washcolib.org/320/New-Titles-for-Kids" style="text-decoration: none;">
-                      <img src="/ImageRepository/Document?documentID=772" alt="">
-                      <figcaption>
-                          <section>
-                              <h4>Children's Book Week</h4>
-                              <p>May 1-7, 2017</p>
-
-
-                          </section>
-                      </figcaption>
-                  </a>
-              </figure>
-          </figure>
-      </div>
-
   <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
@@ -89,7 +71,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
