switched all to Bookawocky and Adult Summer Reading

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -7,12 +7,14 @@
   <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
-              <a href="http://ezproxy.washington.lib.mn.us/login?url=http://infotrac.galegroup.com/itweb/mnpwashpl?db=CHLL" style="text-decoration: none;">
-                  <img src="/ImageRepository/Document?documentID=595" alt="">
+              <a href="/409/Kids-Summer-Reading" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=841" alt="">
                   <figcaption>
                       <section>
-                          <h4>ChiltonLibrary</h4>
-                          <p>Repair and maintenance information online 24/7</p>
+                          <h4>BOOKAWOCKY</h4>
+                          <p>Summer Reading Program for Kids
+                          <br>
+                          June 10 - August 12</p>
 
 
                       </section>
@@ -25,12 +27,14 @@
   <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
-              <a href="https://www.washcolib.org/398/Instant-Book-Club-Kits" style="text-decoration: none;">
-                  <img src="/ImageRepository/Document?documentID=540" alt="Intant Book Club Kits">
+              <a href="/410/Teen-Summer-Reading" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=840" alt="">
                   <figcaption>
                       <section>
-                          <h4>Instant<br> Book Club Kits</h4>
-                          <p>Everything you need to start your own book club TODAY!</p>
+                          <h4>BOOKAWOCKY</h4>
+                          <p>Summer Reading Program for Teens
+                          <br>
+                          June 10 - August 12</p>
 
 
                       </section>
@@ -44,12 +48,16 @@
     <div class="mySlides my-fade">
         <figure class="slider">
             <figure>
-                <a href="http://host6.evanced.info/melsa/washington/eventcalendar.asp?ag=&et=Storytimes&df=list&cn=0&private=0&ln=ALL" style="text-decoration: none;">
-                    <img src="/ImageRepository/Document?documentID=519" alt="Winter Reads 2017">
+                <a href="/411/Adult-Summer-Reading" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=839" alt="">
                     <figcaption>
                         <section>
-                            <h4>Storytimes</h4>
-                            <p>Find one near you!</p>
+                            <h4>10,000 EXPERIENCES
+                            <br>
+                            at Your Library</h4>
+                            <p>Summer Reading Program for Adults
+                            <br>
+                            June 10 - August 12</p>
 
 
                         </section>
